--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,19 @@
         <title>Webpack 4</title>
     </head>
     <body>
-        <div id="result"></div>
+        <div class="container">
+            <div id="dropdown" 
+                class="dropdown-container">
+            </div>
+            <div id="userlist"
+                class="table-container">
+            </div>
+        </div>
+        <div class="back-drop">
+            <div class="dropdown-item-list-box">
+                <div class="dropdown-item-box selected"><span>Google</span></div>
+                <div class="dropdown-item-box"><span>Yahoo</span></div>
+            </div>
+        </div>
     </body>
 </html>
