modify html templete and readme

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Webpack 4</title>
+        <title>UI Component - Dropdown List</title>
     </head>
     <body>
         <div class="container">
